--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "serve dist"
+    "start": "webpack-dev-server --env development --mode development --open"
   },
   "keywords": [],
   "author": "",
@@ -16,12 +16,16 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "dotenv": "^16.3.1",
+    "dotenv-webpack": "^8.0.1",
     "fs": "^0.0.1-security",
     "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.3",
     "htmlprocessor": "^0.3.2",
     "serve": "^12.0.0",
     "url": "^0.11.1",
     "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^4.15.1"
   }
 }
