--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
     "dotenv-webpack": "^8.0.1",
     "fs": "^0.0.1-security",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "htmlprocessor": "^0.3.2",
+    "mini-css-extract-plugin": "^2.7.6",
+    "sass": "^1.64.2",
+    "sass-loader": "^13.3.2",
     "serve": "^12.0.0",
+    "terser-webpack-plugin": "^5.3.9",
     "url": "^0.11.1",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2",
